[gd_scene load_steps=3 format=3 uid="uid://bpkqtxp7u6s7r"]

[ext_resource type="Script" path="res://test/unit/test_remote_song_json/test_remote_song_json.gd" id="1_uysa8"]
[ext_resource type="PackedScene" uid="uid://koljkcrt3kjj" path="res://scenes/song_loader/song_loader.tscn" id="2_h5mk8"]

[node name="TestPreloadedSongs" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uysa8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_right = 0.7
anchor_bottom = 0.9
offset_top = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Songs
"

[node name="PreloaderStatus" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Preloader Status : Loading
"

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="ScrollContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="SongButtons" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="AudioStreamPlayerIndicator" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[node name="SongLoader" parent="." instance=ExtResource("2_h5mk8")]
unique_name_in_owner = true

[connection signal="song_loaded" from="SongLoader" to="." method="_on_song_loaded"]
